src/app/ui/FeaturesCarousel/features-carousel.module.css
.embla {
    /* max-width: 48rem; */
    margin: auto;
    --slide-height: 19rem;
    --slide-spacing: 1rem;
    --slide-size: fit-content;
}

.embla__viewport {
    overflow: hidden;
}

.embla__container {
    display: flex;
    touch-action: pan-y pinch-zoom;
    margin-left: calc(var(--slide-spacing) * -1);
}

.embla__slide {
    max-width: 330px;
    transform: translate3d(0, 0, 0);
    flex: 0 0 var(--slide-size);
    min-width: 0;
    padding-left: var(--slide-spacing);
}

.embla__slide__number {
    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
    border-radius: 1.8rem;
    font-size: 4rem;
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--slide-height);
    user-select: none;
}

.embla__controls {
    display: none;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    z-index: 1000;
    justify-content: space-between;
    align-items: center;
    /* background-color: aqua; */
}

/* Equivalente a sm: de Tailwind */
@media (min-width: 768px) {
    .embla__controls {
        display: flex;
    }
}

.embla__button {
    -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    touch-action: manipulation;
    display: inline-flex;
    text-decoration: none;
    cursor: pointer;
    border: 0;
    padding: 0;
    margin: 0;
    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
    width: 3.6rem;
    height: 3.6rem;
    z-index: 1;
    border-radius: 50%;
    color: var(--text-body);
    display: flex;
    align-items: center;
    justify-content: center;
}

.embla__button:disabled {
    color: var(--detail-high-contrast);
}

.embla__button__svg {
    width: 2rem;
    /* height: 35%; */
}

